@@ -87,36 +87,28 @@ _wrap__file_init(PyGObject *self, PyObject *args, PyObject *kwargs)
 %%
 override g_file_read_async kwargs
 static PyObject *
-_wrap_g_file_read_async(PyGObject *self, PyObject *args, PyObject *kwargs)
+_wrap_g_file_read_async(PyGObject *self,
+			PyObject *args,
+			PyObject *kwargs)
 {
-  static char *kwlist[] = { "io_priority", "cancellable", "callback",
-                            "user_data", NULL };
+  static char *kwlist[] = { "callback", "io_priority",
+			    "cancellable", "user_data", NULL };
   int io_priority = G_PRIORITY_DEFAULT;
-  PyGObject *pycancellable;
+  PyGObject *pycancellable = NULL;
   GCancellable *cancellable;
   PyGAsyncRequestNotify *notify;
   
   notify = g_slice_new0(PyGAsyncRequestNotify);
 
   if (!PyArg_ParseTupleAndKeywords(args, kwargs,
-                                   "iOO|O:InputStream.read_async",
+                                   "O|iOO:InputStream.read_async",
                                    kwlist,
+                                   &notify->callback,
                                    &io_priority,
                                    &pycancellable,
-                                   &notify->callback,
                                    &notify->data))
     {
       g_slice_free(PyGAsyncRequestNotify, notify);
-      return NULL;
-    }
-
-  if ((PyObject*)pycancellable == Py_None)
-    cancellable = NULL;
-  else if (pygobject_check(pycancellable, &PyGCancellable_Type))
-      cancellable = G_CANCELLABLE(pycancellable->obj);
-  else
-    {
-      PyErr_SetString(PyExc_TypeError, "cancellable should be a gio.Cancellable");
       return NULL;
     }
 
@@ -129,6 +121,18 @@ _wrap_g_file_read_async(PyGObject *self, PyObject *args, PyObject *kwargs)
   Py_INCREF(notify->callback);
   Py_XINCREF(notify->data);
   
+  if (pycancellable == NULL || (PyObject*)pycancellable == Py_None)
+    cancellable = NULL;
+  else if (pygobject_check(pycancellable, &PyGCancellable_Type))
+      cancellable = G_CANCELLABLE(pycancellable->obj);
+  else
+    {
+      PyErr_SetString(PyExc_TypeError,
+		      "cancellable should be a gio.Cancellable");
+      g_slice_free(PyGAsyncRequestNotify, notify);
+      return NULL;
+    }
+
   g_file_read_async(G_FILE(self->obj),
                     io_priority,
                     cancellable,
